--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,23 @@
 
 @custom-variant dark (&:is(.dark *));
 
+
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent; /* This will apply a gradient */
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #cacaca;
+  border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #cacaca;
+}
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
